# TowelCam

./: .gitignore  CMakeLists.txt  README.md  cam_settings.json  model_vgg_config.pickle  result.txt
images/: RockyXu66\Faster_RCNN_for_Open_Images_Dataset_Keras: Faster R-CNN for Open Images Dataset by Keras.desktop  convertCvMatBlack.py  depth.txt  frcnn_test_vgg.ipynb  frcnn_train_vgg.ipynb  model_vgg_config-ROI2-250ite-lr_e-4.pickle  model_vgg_config.pickle  result-test.txt  result-train.txt  result.txt
images/.ipynb_checkpoints/: frcnn_train_vgg-checkpoint.ipynb
images/images-newfilter/: depth.txt  result-original.txt  result-test.txt  result-train.txt
images/model/: record-ROI2-250ite-lr_e-4.csv  record-ROI2-250ite.csv  record-ROI2-50ite-lr_e-5.csv  record-ROI4.csv  record.csv
src/: PointFinder.cpp  cam.cpp  camData.cpp  camData.cpp.bak  camTCP.hpp  main.cpp
